# Sephela

./: .env.example  CONTRIBUTING.md  README.md  package-lock.json
ai/: __init__.py  integration.py
ai/agents/: api.py  base.py  code.py  manifest.py  network.py  permission.py  report.py  risk.py  threat_intel.py
ai/llm/: __init__.py  adapters.py  anthropic.py  client.py  factory.py  models.py  openrouter.py  provider.py  streaming.py
ai/orchestration/: __init__.py  checkpointer.py  graph.py  graph_state.py  orchestrator.py  router.py  runner.py  state.py  workflow.py
ai/prompts/: __init__.py  api_prompt.md  code_prompt.md  manifest_prompt.md  network_prompt.md  permission_prompt.md  prompt_manager.py  report_prompt.md  risk_prompt.md  threat_intel_prompt.md
ai/schemas/: api.py  (+10 more)
backend/: .env.example
docs/: PHASE_7_GENAI_IMPLEMENTATION.md
engines/code_intel/: Dockerfile  README.md  pyproject.toml
engines/code_intel/sephela_code_intel/: __init__.py  base.py  constants.py  envelope.py  pipeline.py
engines/code_intel/sephela_code_intel/analyzers/: __init__.py  api_usage.py  call_graph.py  class_filter.py  control_flow.py  grouper.py  summarizer.py
engines/code_intel/tests/: test_api_usage.py  test_class_filter.py  test_control_flow.py  test_grouper.py  test_pipeline.py
engines/static/: Dockerfile  README.md  pyproject.toml
engines/static/sephela_static/: __init__.py  base.py  envelope.py  pipeline.py
engines/static/sephela_static/extractors/: __init__.py  decompile.py  hashes.py  manifest.py  network.py  obfuscation.py  strings.py
engines/static/tests/: test_pipeline.py
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+78 files in other folders)
